--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,7 @@ jobs:
       run: dotnet build --no-restore
     - name: Create Package for Nuget.org\
       run: dotnet pack
+    - name: Create Package Source
+      run: dotnet nuget add source ${{secrets.NUGET_SOURCE_URL}} --name publishSource --username "user" --password ${{ secrets.ST_NUGETKEY }} --store-password-in-clear-text
     - name: Publish Package to Nuget.org
-      run: >
-        dotnet nuget add source ${{secrets.NUGET_SOURCE_URL}} --name publishSource --username "user" --password ${{ secrets.ST_NUGETKEY }} --store-password-in-clear-text
-        && dotnet nuget push ./Xero.NetStandard.OAuth2/bin/Debug/Xero.NetStandard.OAuth2.${{ github.event.release.name }}.nupkg --api-key "az" --source publishSource
+      run: dotnet nuget push ./Xero.NetStandard.OAuth2/bin/Debug/Xero.NetStandard.OAuth2.${{ github.event.release.name }}.nupkg --api-key "az" --source publishSource
